Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ body {
   justify-content: flex-start;
   align-items: flex-end;
   width: 87.7656211853027272px;
+  -moz-width: 87.6656211853027272px;
   height: 87.7656211853027272px;
   margin-left: 5px;
   margin-top: 5px;
